update new database and tour api